--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,25 +1,22 @@
 {
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-      {
-          "type": "node",
-          "request": "launch",
-          "name": "Debug Nest Framework",
-          "args": [
-              "${workspaceFolder}/src/main.ts"
-          ],
-          "runtimeArgs": [
-              "--nolazy",
-              "-r",
-              "ts-node/register",
-              "-r",
-              "tsconfig-paths/register"
-          ],
-          "sourceMaps": true,
-          "envFile": "${workspaceFolder}/.env",
-          "cwd": "${workspaceRoot}",
-          "console": "integratedTerminal",
-          "protocol": "inspector"
-      }
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Program",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/src/main.ts",
+      "preLaunchTask": "tsc: build - tsconfig.json",
+      "runtimeExecutable": "/home/manuel.molina/.nvm/versions/node/v18.13.0/bin/node",
+      "outFiles": [
+        "${workspaceFolder}/dist/**/*.js"
+      ]
+    }
   ]
 }
