--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "strict": true,
+    "types": ["node", "jest"]
   }
 }
