--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,24 @@
-version: '3.7'
-
-volumes:
-  postgres:
-
 services:
   postgres:
     image: postgres:14
     restart: always
+    user: "999:999"  # Ensuring the container runs with user postgres
     environment:
-      - POSTGRES_DB=workshop-admin
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
+      POSTGRES_DB: workshop-admin
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
     volumes:
-      - postgres:/var/lib/postgresql
-      - postgres:/var/log/postgresql
+      - postgres-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
   pgadmin:
     image: dpage/pgadmin4
     environment:
-     - PGADMIN_DEFAULT_EMAIL=root@admin.com
-     - PGADMIN_DEFAULT_PASSWORD=root
+      PGADMIN_DEFAULT_EMAIL: root@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
     ports:
       - "5050:80"
+
+volumes:
+  postgres-data:
+    driver: local
