--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "@types/yup": "^0.32.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "nest": "^0.1.6",
     "pg": "^8.7.3",
     "postgres": "^3.2.4",
     "reflect-metadata": "^0.1.13",
